# vpa-llm-fixer

./: GET_STARTED.md  README.md  ROADMAP.md  Readme.md  ideas.json  ollama_client.py  ollama_qwen_client.py  pyproject.toml  status.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
lora/: basic_lora.py
specs/001-vpa-mvp/: README.md  TEAM_ASSIGNMENTS.md  plan.md  spec.md  tasks.md
specs/001-vpa-mvp/checklists/: person1-draft-verify.md  person2-plan-apply.md  person3-eval-gate-cli.md
vpa/: __init__.py  __main__.py
vpa/draft/: __init__.py  generator.py
vpa/eval/: __init__.py  scorer.py
vpa/verify/: __init__.py  checker.py  code_executor.py
