[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpa-llm-fixer"
version = "0.1.0"
description = "Verifier-Plan-Apply (VPA) Framework for LLM Improvement"
readme = "Readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
vpa = "vpa.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vpa*", "ollama_client*"]
